--- a/tests/cycod-yaml/default-log-file-tests.yaml
+++ b/tests/cycod-yaml/default-log-file-tests.yaml
@@ -1,7 +1,7 @@
 # Test default log file name template: log-{ProgramName}-{time}.log
 
 class: default-log-file-tests
-tag: cycod
+tags: [cycod, logger]
 tests:
 
 - name: Test default log file name template for cycod
