--- a/tests/cycod-yaml/log-file-tests.yaml
+++ b/tests/cycod-yaml/log-file-tests.yaml
@@ -1,7 +1,7 @@
 # Test custom log file name
 
 class: log-file-tests
-tag: cycod
+tags: [cycod, logger]
 tests:
 
 - name: Test log file creation with custom filename for cycod
