--- a/tests/cycodmd-yaml/log-template-variable-tests.yaml
+++ b/tests/cycodmd-yaml/log-template-variable-tests.yaml
@@ -2,7 +2,7 @@
 # Tests various template variable formats: {ProgramName}, {Time}, {TimeStamp} and case variations
 
 class: log-template-variable-tests
-tag: cycodmd
+tags: [cycodmd, logger]
 tests:
 
 - name: Test ProgramName template variable (uppercase P) for cycodmd
