--- a/tests/cycodt-yaml/log-file-tests.yaml
+++ b/tests/cycodt-yaml/log-file-tests.yaml
@@ -1,7 +1,7 @@
 # Test custom log file name
 
 class: log-file-tests
-tag: cycodt
+tags: [cycodt, logger]
 tests:
 
 - name: Test log file creation with custom filename for cycodt
