--- a/tests/cycod-yaml/logger/memory-logger-behavior-tests.yaml
+++ b/tests/cycod-yaml/logger/memory-logger-behavior-tests.yaml
@@ -1,6 +1,7 @@
 # Test memory logger behavior: Test that memory logging is always active
 # and that memory logs get dumped to a file when an error occurs
 
+workingDirectory: ../../../testresults/cycod/logger/memory-logger-behavior-tests
 class: memory-logger-behavior-tests
 tags: [cycod, logger]
 tests:
