--- a/tests/cycod-yaml/logger/default-log-file-tests.yaml
+++ b/tests/cycod-yaml/logger/default-log-file-tests.yaml
@@ -1,28 +1,29 @@
 # Test default log file name template: log-{ProgramName}-{time}.log
 
+workingDirectory: ../../../testresults/cycod/logger/default-log-file-tests
 class: default-log-file-tests
-tags: [cycodt, logger]
+tags: [cycod, logger]
 tests:
 
-- name: Test default log file name template for cycodt
+- name: Test default log file name template for cycod
   steps:
-  - name: Run cycodt and verify log file
+  - name: Run cycod and verify log file
     bash: |
-      cycodt version --log
-      cycodmd log-cycodt-*.log exception-log-*.log
+      cycod version --log
+      cycodmd log-cycod-*.log exception-log-*.log
     expect-regex: |
       Version:
-      log-cycodt-[0-9]+\.log
+      log-cycod-[0-9]+\.log
       File logger initialized with file:
       Memory logger configured to dump to
-      exception-log-cycodt-[0-9]+\.log
+      exception-log-cycod-[0-9]+\.log
       Logging system fully initialized
     not-expect-regex: |
       ## exception-log-.*\.log
   
   - name: Clean up test log files
     bash: |
-      rm -f log-cycodt-*.log exception-log-cycodt-*.log
+      rm -f log-cycod-*.log exception-log-cycod-*.log
       echo "Cleanup completed"
     expect-regex: |
       Cleanup completed
