--- a/tests/cycod-yaml/logger/log-file-tests.yaml
+++ b/tests/cycod-yaml/logger/log-file-tests.yaml
@@ -1,5 +1,6 @@
 # Test custom log file name
 
+workingDirectory: ../../../testresults/cycod/logger/log-file-tests
 class: log-file-tests
 tags: [cycod, logger]
 tests:
