--- a/tests/cycodmd-yaml/logger/default-log-file-tests.yaml
+++ b/tests/cycodmd-yaml/logger/default-log-file-tests.yaml
@@ -1,28 +1,29 @@
 # Test default log file name template: log-{ProgramName}-{time}.log
 
+workingDirectory: ../../../testresults/cycodmd/logger/default-log-file-tests
 class: default-log-file-tests
-tags: [cycod, logger]
+tags: [cycodmd, logger]
 tests:
 
-- name: Test default log file name template for cycod
+- name: Test default log file name template for cycodmd
   steps:
-  - name: Run cycod and verify log file
+  - name: Run cycodmd and verify log file
     bash: |
-      cycod version --log
-      cycodmd log-cycod-*.log exception-log-*.log
+      cycodmd version --log
+      cycodmd log-cycodmd-*.log exception-log-*.log
     expect-regex: |
       Version:
-      log-cycod-[0-9]+\.log
+      log-cycodmd-[0-9]+\.log
       File logger initialized with file:
       Memory logger configured to dump to
-      exception-log-cycod-[0-9]+\.log
+      exception-log-cycodmd-[0-9]+\.log
       Logging system fully initialized
     not-expect-regex: |
       ## exception-log-.*\.log
   
   - name: Clean up test log files
     bash: |
-      rm -f log-cycod-*.log exception-log-cycod-*.log
+      rm -f log-cycodmd-*.log exception-log-cycodmd-*.log
       echo "Cleanup completed"
     expect-regex: |
       Cleanup completed
