--- a/tests/cycodt-yaml/logger/log-template-variable-tests.yaml
+++ b/tests/cycodt-yaml/logger/log-template-variable-tests.yaml
@@ -1,25 +1,26 @@
 # Test log file template variables
 # Tests various template variable formats: {ProgramName}, {Time}, {TimeStamp} and case variations
 
+workingDirectory: ../../../testresults/cycodt/logger/log-template-variable-tests
 class: log-template-variable-tests
-tags: [cycodmd, logger]
+tags: [cycodt, logger]
 tests:
 
-- name: Test ProgramName template variable (uppercase P) for cycodmd
+- name: Test ProgramName template variable (uppercase P) for cycodt
   steps:
-  - name: Run cycodmd with {ProgramName} template and verify
+  - name: Run cycodt with {ProgramName} template and verify
     bash: |
-      cycodmd version --log "test-{ProgramName}-log.log"
-      cycodmd test-cycodmd-log.log exception-test-cycodmd-log.log
+      cycodt version --log "test-{ProgramName}-log.log"
+      cycodmd test-cycodt-log.log exception-test-cycodt-log.log
     expect-regex: |
       Version:
-      test-cycodmd-log\.log
+      test-cycodt-log\.log
       File logger initialized with file:
       Memory logger configured to dump to
-      exception-test-cycodmd-log\.log
+      exception-test-cycodt-log\.log
       Logging system fully initialized
     not-expect-regex: |
-      ## exception-test-cycodmd-log\.log
+      ## exception-test-cycodt-log\.log
 
   - name: Clean up test log files
     bash: |
@@ -28,21 +29,21 @@ tests:
     expect-regex: |
       Cleanup completed
 
-- name: Test programName template variable (lowercase p) for cycodmd
+- name: Test programName template variable (lowercase p) for cycodt
   steps:
-  - name: Run cycodmd with {programName} template and verify
+  - name: Run cycodt with {programName} template and verify
     bash: |
-      cycodmd version --log "test-{programName}-log.log"
-      cycodmd test-cycodmd-log.log exception-test-cycodmd-log.log
+      cycodt version --log "test-{programName}-log.log"
+      cycodmd test-cycodt-log.log exception-test-cycodt-log.log
     expect-regex: |
       Version:
-      test-cycodmd-log\.log
+      test-cycodt-log\.log
       File logger initialized with file:
       Memory logger configured to dump to
-      exception-test-cycodmd-log\.log
+      exception-test-cycodt-log\.log
       Logging system fully initialized
     not-expect-regex: |
-      ## exception-test-cycodmd-log\.log
+      ## exception-test-cycodt-log\.log
 
   - name: Clean up test log files
     bash: |
@@ -51,11 +52,11 @@ tests:
     expect-regex: |
       Cleanup completed
 
-- name: Test Time template variable (uppercase T) for cycodmd
+- name: Test Time template variable (uppercase T) for cycodt
   steps:
-  - name: Run cycodmd with {Time} template and verify
+  - name: Run cycodt with {Time} template and verify
     bash: |
-      cycodmd version --log "test-{Time}-log.log"
+      cycodt version --log "test-{Time}-log.log"
       cycodmd test-*-log.log exception-test-*-log.log
     expect-regex: |
       Version:
@@ -74,11 +75,11 @@ tests:
     expect-regex: |
       Cleanup completed
 
-- name: Test time template variable (lowercase t) for cycodmd
+- name: Test time template variable (lowercase t) for cycodt
   steps:
-  - name: Run cycodmd with {time} template and verify
+  - name: Run cycodt with {time} template and verify
     bash: |
-      cycodmd version --log "test-{time}-log.log"
+      cycodt version --log "test-{time}-log.log"
       cycodmd test-*-log.log exception-test-*-log.log
     expect-regex: |
       Version:
@@ -97,11 +98,11 @@ tests:
     expect-regex: |
       Cleanup completed
 
-- name: Test TimeStamp template variable (uppercase T and S) for cycodmd
+- name: Test TimeStamp template variable (uppercase T and S) for cycodt
   steps:
-  - name: Run cycodmd with {TimeStamp} template and verify
+  - name: Run cycodt with {TimeStamp} template and verify
     bash: |
-      cycodmd version --log "test-{TimeStamp}-log.log"
+      cycodt version --log "test-{TimeStamp}-log.log"
       cycodmd test-*-log.log exception-test-*-log.log
     expect-regex: |
       Version:
@@ -120,11 +121,11 @@ tests:
     expect-regex: |
       Cleanup completed
 
-- name: Test timestamp template variable (lowercase t and s) for cycodmd
+- name: Test timestamp template variable (lowercase t and s) for cycodt
   steps:
-  - name: Run cycodmd with {timestamp} template and verify
+  - name: Run cycodt with {timestamp} template and verify
     bash: |
-      cycodmd version --log "test-{timestamp}-log.log"
+      cycodt version --log "test-{timestamp}-log.log"
       cycodmd test-*-log.log exception-test-*-log.log
     expect-regex: |
       Version:
@@ -143,21 +144,21 @@ tests:
     expect-regex: |
       Cleanup completed
 
-- name: Test combined template variables for cycodmd
+- name: Test combined template variables for cycodt
   steps:
-  - name: Run cycodmd with multiple template variables and verify
+  - name: Run cycodt with multiple template variables and verify
     bash: |
-      cycodmd version --log "test-{ProgramName}-{time}-combined.log"
-      cycodmd test-cycodmd-*-combined.log exception-test-cycodmd-*-combined.log
+      cycodt version --log "test-{ProgramName}-{time}-combined.log"
+      cycodmd test-cycodt-*-combined.log exception-test-cycodt-*-combined.log
     expect-regex: |
       Version:
-      test-cycodmd-[0-9]+-combined\.log
+      test-cycodt-[0-9]+-combined\.log
       File logger initialized with file:
       Memory logger configured to dump to
-      exception-test-cycodmd-[0-9]+-combined\.log
+      exception-test-cycodt-[0-9]+-combined\.log
       Logging system fully initialized
     not-expect-regex: |
-      ## exception-test-cycodmd-.*-combined\.log
+      ## exception-test-cycodt-.*-combined\.log
 
   - name: Clean up test log files
     bash: |
