--- a/tests/cycod-yaml/cycod-slash-commands.yaml
+++ b/tests/cycod-yaml/cycod-slash-commands.yaml
@@ -1,7 +1,7 @@
 class: slash-commands
 tag: cycod
 tests:
-- name: /file README.md
+- name: file_command_test
   run: cycod --input "/file README.md" --input exit --openai-api-key fake --use-openai
   workingDirectory: testfiles
   expect-regex: |
@@ -11,9 +11,6 @@ tests:
     ^user-function: /file => \.\.\.\r?$\n
     ^user-function: /file => ## README\.md\r?$\n
     ^\r?$\n
-    ^Modified: .*\r?$\n
-    ^Size: .*\r?$\n
-    ^\r?$\n
     ^```markdown\r?$\n
     ^# README\.md\r?$\n
     ^\r?$\n
@@ -24,7 +21,7 @@ tests:
     ^User: \r?$\n
     ^User: exit\r?$\n
 
-- name: /files README.md
+- name: files_command_test
   run: cycod --input "/files README.md" --input exit --openai-api-key fake --use-openai
   workingDirectory: testfiles
   expect-regex: |
@@ -34,9 +31,6 @@ tests:
     ^user-function: /files => \.\.\.\r?$\n
     ^user-function: /files => ## README\.md\r?$\n
     ^\r?$\n
-    ^Modified: .*\r?$\n
-    ^Size: .*\r?$\n
-    ^\r?$\n
     ^```markdown\r?$\n
     ^# README\.md\r?$\n
     ^\r?$\n
@@ -47,7 +41,7 @@ tests:
     ^User: \r?$\n
     ^User: exit\r?$\n
 
-- name: /find README.md
+- name: find_command_test
   run: cycod --input "/find README.md" --input exit --openai-api-key fake --use-openai
   workingDirectory: testfiles
   expect-regex: |
@@ -57,32 +51,11 @@ tests:
     ^user-function: /find => \.\.\.\r?$\n
     ^user-function: /find => ## README\.md\r?$\n
     ^\r?$\n
-    ^Modified: .*\r?$\n
-    ^Size: .*\r?$\n
-    ^\r?$\n
     ^```markdown\r?$\n
     ^# README\.md\r?$\n
     ^\r?$\n
     ^This is an example README\.md\r?$\n
     ^\r?$\n
-    ^```\r?$\n
-    ^\r?$\n
-    ^User: \r?$\n
-    ^User: exit\r?$\n
-
-- name: /run echo hi
-  run: cycod --input "/run echo hi" --input exit --openai-api-key fake --use-openai
-  workingDirectory: testfiles
-  expect-regex: |
-    ^\r?$\n
-    ^User: /run echo hi\r?$\n
-    ^\r?$\n
-    ^user-function: /run => \.\.\.\r?$\n
-    ^user-function: /run => ## `echo hi`\r?$\n
-    ^\r?$\n
-    ^Output:\r?$\n
-    ^```\r?$\n
-    ^hi\r?$\n
     ^```\r?$\n
     ^\r?$\n
     ^User: \r?$\n
