--- a/tests/cycod-yaml/logger/default-log-file-tests.yaml
+++ b/tests/cycod-yaml/logger/default-log-file-tests.yaml
@@ -6,6 +6,7 @@ tags: [cycod, logger]
 tests:
 
 - name: Test default log file name template for cycod
+  parallelize: false
   steps:
   - name: Run cycod and verify log file
     bash: |
