--- a/tests/cycod-yaml/logger/log-environment-variables-tests.yaml
+++ b/tests/cycod-yaml/logger/log-environment-variables-tests.yaml
@@ -7,6 +7,7 @@ tags: [cycod, logger]
 tests:
 
 - name: Test LOG_LEVEL environment variable is read and applied to File Logger
+  parallelize: false
   steps:
   - name: Run cycod with LOG_LEVEL=Error and verify logger configuration
     env:
