--- a/tests/cycod-yaml/logger/log-file-error-handling-tests.yaml
+++ b/tests/cycod-yaml/logger/log-file-error-handling-tests.yaml
@@ -7,6 +7,7 @@ tags: [cycod, logger]
 tests:
 
 - name: Test logging to invalid directory path - application continues to work
+  parallelize: false
   steps:
   - name: Attempt to log to non-existent directory and verify command succeeds
     bash: |
