--- a/tests/cycod-yaml/logger/log-level-configuration-tests.yaml
+++ b/tests/cycod-yaml/logger/log-level-configuration-tests.yaml
@@ -7,6 +7,7 @@ tags: [cycod, logger]
 tests:
 
 - name: Test log level Error - should only show Error messages
+  parallelize: false
   steps:
   - name: Run cycod with LOG_LEVEL=Error and capture logs
     env:
