--- a/tests/cycodt-yaml/inception-layer-1-tests/test-cycodt-list.yaml
+++ b/tests/cycodt-yaml/inception-layer-1-tests/test-cycodt-list.yaml
@@ -4,35 +4,35 @@ tests:
 - name: cycodt list
   run: cycodt list --file simple.yaml
   expect-regex: |
-    yaml.simple.simple.running simple process
+    cycodt.simple.simple.running simple process
     Found 1 test...
 
 - name: cycodt list w/optional windows
   run: cycodt list --files simple.yaml --include-optional windows
   expect-regex: |
-    yaml.simple.simple.running simple process
-    yaml.simple.simple.running script w/ regex expectation
+    cycodt.simple.simple.running simple process
+    cycodt.simple.simple.running script w/ regex expectation
     Found 2 tests...
 
 - name: cycodt list w/optional linux
   run: cycodt list --files simple.yaml --include-optional linux
   expect-regex: |
-    yaml.simple.simple.running simple process
-    yaml.simple.simple.running bash script w/ regex expectation
+    cycodt.simple.simple.running simple process
+    cycodt.simple.simple.running bash script w/ regex expectation
     Found 2 tests...
     
 - name: cycodt list w/optional all
   run: cycodt list --files simple.yaml --include-optional
   expect-regex: |
-    yaml.simple.simple.running simple process
-    yaml.simple.simple.running script w/ regex expectation
-    yaml.simple.simple.running bash script w/ regex expectation
+    cycodt.simple.simple.running simple process
+    cycodt.simple.simple.running script w/ regex expectation
+    cycodt.simple.simple.running bash script w/ regex expectation
     Found 3 tests...
 
 - name: cycodt list all files, excluding simple2 and simple3
   run: cycodt list --files simple*yaml --exclude-files simple2.yaml simple3.yaml
   expect-regex: |
-    yaml.simple.simple.running simple process
+    cycodt.simple.simple.running simple process
     Found 1 test...
 
 - name: cycodt list all files, verbosely
@@ -40,16 +40,16 @@ tests:
   expect-regex: |
     ^.*[\\/]tests[\\/]cycodt-yaml[\\/]inception-layer-1[\\/]simple.yaml\r?$\n
     ^\r?$\n
-    ^  yaml.simple.simple.running simple process\r?$\n
-    ^  yaml.simple.simple.running script w/ regex expectation\r?$\n
-    ^  yaml.simple.simple.running bash script w/ regex expectation\r?$\n
+    ^  cycodt.simple.simple.running simple process\r?$\n
+    ^  cycodt.simple.simple.running script w/ regex expectation\r?$\n
+    ^  cycodt.simple.simple.running bash script w/ regex expectation\r?$\n
     ^\r?$\n
     ^.*[\\/]tests[\\/]cycodt-yaml[\\/]inception-layer-1[\\/]simple2.yaml\r?$\n
     ^\r?$\n
-    ^  yaml.simple2.simple2.output into file\r?$\n
-    ^  yaml.simple2.simple2.checkout output into file\r?$\n
+    ^  cycodt.simple2.simple2.output into file\r?$\n
+    ^  cycodt.simple2.simple2.checkout output into file\r?$\n
     ^\r?$\n
     ^.*[\\/]tests[\\/]cycodt-yaml[\\/]inception-layer-1[\\/]simple3.yaml\r?$\n
     ^\r?$\n
-    ^  yaml.simple3.simple3.echo animals w/ expectation\r?$\n
-    ^  yaml.simple3.simple3.echo animals wo/ expectation\r?$\n
+    ^  cycodt.simple3.simple3.echo animals w/ expectation\r?$\n
+    ^  cycodt.simple3.simple3.echo animals wo/ expectation\r?$\n
