Fix test expectations and add cleanup step for config tests

--- a/tests/cycod-yaml/cycod-config-tests.yaml
+++ b/tests/cycod-yaml/cycod-config-tests.yaml
@@ -91,3 +91,6 @@
     run: cycod config clear openai.apiKey --local
     expect-regex: |
       OpenAI.ApiKey: \(cleared\)
+
+  - name: Cleanup local test config
+    run: rm -rf .cycod
