Add TRX collection desynchronization evidence gathering
- Add debug logging to TrxXmlTestReporter to detect when TestResults have missing TestCases
- Update CI to capture debug logs with --debug flag and matching log filename
- Evidence will appear in logs as '[TRX EVIDENCE]' when collection desynchronization occurs
- Helps diagnose root cause of CI failures where dorny/test-reporter fails with undefined TestMethod errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
         which cycod
         which cycodmd
         which cycodt
-        cycodt run --output-file ./TestResults/test-results-cycodt.trx
+        cycodt run --debug --log ./TestResults/test-results-cycodt.log --output-file ./TestResults/test-results-cycodt.trx
     
     - name: Clean up inception test TRX files
       run: |
@@ -76,7 +76,9 @@ jobs:
       if: always()  # Upload test results even if tests fail
       with:
         name: test-results
-        path: ./TestResults/*.trx
+        path: |
+          ./TestResults/*.trx
+          ./TestResults/test-results-cycodt.log
     
     - name: Publish test results
       uses: dorny/test-reporter@v1
