Separate AI names the convo
Now a new, clean instance of cycod names the conversations. That way, the existing conversation doesn't get messed up by the user asking for a title.

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,4 @@ tests/cycodt-yaml/testresults/
 tests/cycodt-yaml/inception-layer-1/test-results-simple-optional.trx
 tests/cycodt-yaml/inception-layer-1/test-results-simple.trx
 tests/cycodt-yaml/inception-layer-1/test-results-simple?.trx
+*.log
